4/4.01/manifests/deployment-app-0-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-0-db-dep
  namespace: app-db-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-0-db
  template:
    metadata:
      labels:
        app: app-0-db
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: app-0-db
          #image: jylhakos/app-0-db:v1
          image: jylhakos/app-0-db
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/files
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
               path: /healthz
               port: 3541
