4/4.01/manifests/deployment-app-2-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-2-db-dep
  namespace: app-db-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-2-db
  template:
    metadata:
      labels:
        app: app-2-db
    spec:
      containers:
        - name: app-2-db
          #image: jylhakos/app-2-db:v1
          image: jylhakos/app-2-db
          ports:
          - containerPort: 3001
            name: app-2-db
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
               path: /healthz
               port: 3001
