4/4.01/manifests/postgresql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql-ss
  namespace: app-db-namespace
spec:
  serviceName: postgresql-svc
  selector:
    matchLabels:
      app: postgresql-db
  replicas: 1
  template:
    metadata:
      labels:
        app: postgresql-db
    spec:
      containers:
        - name: postgresql
          image: postgres:latest
          ports:
          - containerPort: 5432
            name: postgresql-port
          volumeMounts:
            - name: postgresql-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgresql-data
        namespace: app-db-namespace
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
