4/4.01/manifests/service-app-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-2-db-svc
  namespace: app-db-namespace
spec:
  type: ClusterIP
  selector:
    app: app-2-db
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3001
